refactor: Board 코드 스타일 개선
- 필드명 board → pieces로 변경 (클래스명 중복 제거, SonarQube S1700)
- collect(toList()) → Stream.toList()로 교체 (SonarQube S6204)