@@ -1,7 +1,5 @@
 package janggi.domain.board;
 
-import static java.util.stream.Collectors.toList;
-
 import janggi.domain.Team;
 import janggi.domain.piece.EmptyPiece;
 import janggi.domain.piece.Piece;
@@ -14,41 +12,41 @@ public class Board {
 
     private static final long GENERAL_COUNT = 2;
 
-    private final Map<Position, Piece> board;
+    private final Map<Position, Piece> pieces;
 
     public Board(Map<Position, Piece> board) {
-        this.board = board;
+        this.pieces = board;
     }
 
     public Map<Position, Piece> move(Position from, Position to, Team currentTeam) {
         validate(from, to, currentTeam);
-        Piece fromPiece = board.get(from);
+        Piece fromPiece = pieces.get(from);
         List<Piece> piecesOnPath = collectPiecesOnPath(fromPiece.getPath(from, to));
-        fromPiece.canMove(piecesOnPath, board.get(to));
+        fromPiece.canMove(piecesOnPath, pieces.get(to));
         movePiece(from, to, fromPiece);
         return showBoard();
     }
 
     private List<Piece> collectPiecesOnPath(List<Position> path) {
         return path.stream()
-                .map(board::get)
-                .collect(toList());
+                .map(pieces::get)
+                .toList();
     }
 
     private void movePiece(Position from, Position to, Piece piece) {
-        board.put(from, new EmptyPiece());
-        board.put(to, piece);
+        pieces.put(from, new EmptyPiece());
+        pieces.put(to, piece);
     }
 
     public boolean isGeneralCaptured() {
-        return board.values().stream()
+        return pieces.values().stream()
                 .filter(piece -> !piece.isEmptyPiece())
                 .filter(piece -> piece.isSameType(PieceType.GENERAL))
                 .count() < GENERAL_COUNT;
     }
 
     public Map<Position, Piece> showBoard() {
-        return Map.copyOf(board);
+        return Map.copyOf(pieces);
     }
 
     private void validate(Position from, Position to, Team currentTeam) {
@@ -64,13 +62,13 @@ public class Board {
     }
 
     private void validateNotEmpty(Position from) {
-        if (board.get(from).isEmptyPiece()) {
+        if (pieces.get(from).isEmptyPiece()) {
             throw new IllegalArgumentException("[ERROR] 선택된 기물이 없습니다.");
         }
     }
 
     private void validateTurn(Position from, Team currentTeam) {
-        if (!board.get(from).isSame(currentTeam)) {
+        if (!pieces.get(from).isSame(currentTeam)) {
             throw new IllegalArgumentException("[ERROR] 현재 턴의 기물만 이동할 수 있습니다.");
         }
     }
